# biometric-voice

./: .gitignore  API_DOCS.md  README.md  SYSTEM_OVERVIEW.md  pyproject.toml  voice-api.service
biometric_voice/: __init__.py  api.py  challenge.py  cli.py  db.py  speaker.py
